--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,27 +28,15 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
-  icon:
-    repo: fontawesome/brands/github
   language: zh
   logo: cod-fix-logo2.svg
   favicon: cod-fix-logo2.svg
-  features:
-    - navigation.tabs
-    - navigation.tabs.sticky
-    - content.code.copy
-markdown_extensions:
-  - pymdownx.highlight:
-      anchor_linenums: true
-      line_spans: __span
-      pygments_lang_class: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
-  - pymdownx.critic
-  - pymdownx.caret
-  - pymdownx.keys
-  - pymdownx.mark
-  - pymdownx.tilde
-  - attr_list
-copyright: Copyright &copy; 2023 - 2024 GudupaoSpark
+extra:
+  alternate:
+    - name: English
+      link: /en/ 
+      lang: en
+    - name: 简体中文
+      link: /
+      lang: zh
+copyright: Copyright &copy; 2023 - 2024 Gudupao Spark Inc.
