--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,10 @@ repo_name: Github Repo
 plugins:
   - search
   - include_dir_to_nav
-
+  - mkdocs-git-committers-plugin-2
+  - git-committers:
+      repository: GudupaoSpark/code-fix
+      
 extra_javascript:
   - 'js/baidu-tongji.js'
 
