--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ plugins:
   - include_dir_to_nav
   - git-committers:
       repository: GudupaoSpark/code-fix
+      branch: main
       
 extra_javascript:
   - 'js/baidu-tongji.js'
