--- a/.github/workflows/previewpr.yml
+++ b/.github/workflows/previewpr.yml
@@ -29,7 +29,7 @@ jobs:
           cache: 'pip'
 
       - name: Install MkDocs and MkDocs Material
-        run: pip install mkdocs mkdocs-material
+        run: pip install mkdocs-material mkdocs-include-dir-to-nav mkdocs-git-committers-plugin-2
 
       - name: Build site with MkDocs
         run: mkdocs build
