--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material 
-      - run: pip install mkdocs-include-dir-to-nav
-      - run: pip install mkdocs-git-committers-plugin-2
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force
