--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,11 +12,12 @@ jobs:
     - name: Check for changes outside /docs/
       id: changes
       run: |
-        # 获取所有更改的文件
-        CHANGED_FILES=$(git diff --name-only HEAD~1)
-        # 检查是否有更改的文件不在/docs/目录下
+        # 获取当前PR与目标分支之间的更改文件列表
+        CHANGED_FILES=$(git diff --name-only${{ github.base_ref }})
+        # 输出更改的文件列表以供调试
         echo "更改的文件列表:"
         echo "$CHANGED_FILES"
+        # 检查是否有更改的文件不在/docs/目录下
         if echo "$CHANGED_FILES" | grep -vE '^docs/' ; then
           echo "存在不在/docs/目录下的更改文件。"
           echo "::set-output name=changes::true"
@@ -24,7 +25,7 @@ jobs:
           echo "::set-output name=changes::false"
         fi
 
-    - name: 如果更改了/docs/目录以外的文件，则关闭Pull Request
+    - name: 如果更改了/docs/目录以外的文件，则请求更改并关闭Pull Request
       if: steps.changes.outputs.changes == 'true'
       uses: actions/github-script@v6
       with:
@@ -37,6 +38,7 @@ jobs:
             event: 'REQUEST_CHANGES',
             body: '此拉取请求包含了`/docs/`目录之外的更改。请仅限于在`/docs/`目录中进行更改。'
           });
+          # 通常GitHub不允许直接关闭他人创建的PR，以下代码可能不会成功执行
           github.pulls.update({
             owner: context.repo.owner,
             repo: context.repo.repo,
