--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,20 +10,27 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # 确保获取所有提交记录
 
     - name: Check modified files
       run: |
+        # 获取当前 PR 的 base 分支
+        BASE_BRANCH=$(echo "${{ github.event.pull_request.base.ref }}")
+        # 拉取最新的更改
+        git fetch origin $BASE_BRANCH
+
         # 获取修改的文件列表
-        MODIFIED_FILES=$(git diff --name-only origin/main)
+        MODIFIED_FILES=$(git diff --name-only origin/$BASE_BRANCH)
         # 检查是否有非 /docs/ 目录的文件被修改
         if echo "$MODIFIED_FILES" | grep -qvE '^docs/'; then
-          echo "Detected non-docs files changed!"
+          echo "检测到非 docs 目录的文件被修改！"
           # 提醒提交者
-          gh pr comment "$GITHUB_REF" -b "⚠️ PR contains changes outside of the /docs/ directory. Please limit your changes to the /docs/ folder."
+          gh pr comment "$GITHUB_REF" -b "⚠️ 该 PR 包含了除 /docs/ 目录以外的更改，请将修改限制在 /docs/ 文件夹内。"
           # 关闭 PR
-          gh pr close "$GITHUB_REF" -r "PR contains changes outside of /docs/ directory."
+          gh pr close "$GITHUB_REF" -r "PR 包含了除 /docs/ 目录以外的更改。"
         else
-          echo "Only /docs/ files were modified."
+          echo "仅修改了 /docs/ 目录下的文件。"
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
