--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,14 +29,14 @@ theme:
 
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      scheme: light
+      scheme: default 
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
 
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
-      scheme: dark
+      scheme: slate
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
