--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,8 +12,9 @@ plugins:
       
 extra_javascript:
   - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - 'js/baidu-tongji.js'
+  - 'js/math.js'
   - 'js/copy.js'
 
 extra_css:
